# xfce4-applet-weather

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac.in
panel-plugin/: Makefile.am  applet-weather.desktop.in  main.c  weather-config.c  weather-config.h  weather-debug.c  weather.c  weather.h
